[tool.poetry]
name = "todoist-cli"
version = "0.1.0"
description = ""
authors = ["Dave McPherson <davemcpherson@wochstudios.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
