[tool.poetry]
name = "todoist_cli"
version = "0.0.2"
description = "Simple commnandl ine utility for managing tasks and projects in Todoist"
authors = ["Dave McPherson <davemcpherson@wochstudios.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DMcP89/todoist_cli"
repository = "https://github.com/DMcP89/todoist_cli"
keywords = ["todoist", "todo", "cli", "todo list"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: IPython",
    "Operating System :: OS Independent",
     "Programming Language :: Python :: 3.8",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
rich = "^10.16.2"
todoist-python = "^8.1.3"
todoist-api-python = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.930"
isort = "^5.10.1"

[tool.poetry.scripts]
todoist-cli = "todoist_cli.cli:todo"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
